--- a/src/config/config.json
+++ b/src/config/config.json
@@ -19,7 +19,7 @@
   "metadata": {
     "meta_author": "Andrei",
     "meta_image": "/images/og-image.png",
-    "meta_description": "Este es el blog de Andrei, aquí comparto ideas sobre SEO, IA y emprendimiento sin filtros. Únete a +5.000 lectores apasionados por la tecnología."
+    "meta_description": "En mi blog comparto ideas sobre SEO, IA y emprendimiento sin filtros. Únete a +5.000 lectores apasionados por la tecnología."
   },
 
   "params": {
