--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-icons": "^5.3.0",
     "react-lite-youtube-embed": "^2.4.0",
     "remark-collapse": "^0.1.2",
-    "remark-toc": "^9.0.0"
+    "remark-toc": "^9.0.0",
+    "vanilla-cookieconsent": "^3.0.1"
   },
   "devDependencies": {
     "@astrojs/tailwind": "^5.1.1",
